@@ -9,8 +9,8 @@ Build-Depends:
 	libghc-pcre-light-dev,
 	libghc-sha-dev,
 	libghc-dataenc-dev,
+	libghc-http-dev,
 	libghc-utf8-string-dev,
-	libghc-curl-dev,
 	libghc-hs3-dev (>= 0.5.6),
 	libghc-testpack-dev [any-i386 any-amd64],
 	ikiwiki,
