@@ -25,7 +25,7 @@ To build and use git-annex, you will need:
   * [dataenc](http://hackage.haskell.org/package/dataenc)
   * [TestPack](http://hackage.haskell.org/cgi-bin/hackage-scripts/package/testpack)
   * [QuickCheck 2](http://hackage.haskell.org/package/QuickCheck)
-  * [curl](http://hackage.haskell.org/package/curl)
+  * [HTTP](http://hackage.haskell.org/package/HTTP)
   * [hS3](http://hackage.haskell.org/package/hS3) (optional, but recommended)
 * Shell commands
   * [git](http://git-scm.com/)
