@@ -7,6 +7,7 @@ sudo cabal install pcre-light
 sudo cabal install quickcheck  
 sudo cabal install SHA
 sudo cabal install dataenc
+sudo cabal install HTTP
 sudo cabal install hS3 # optional
 
 # optional: this will enable the gnu tools, (to give sha224sum etc..., it does not override the BSD userland)
