@@ -30,14 +30,14 @@ Executable git-annex
   Main-Is: git-annex.hs
   Build-Depends: haskell98, MissingH, hslogger, directory, filepath,
    unix, containers, utf8-string, network, mtl, bytestring, old-locale, time,
-   pcre-light, extensible-exceptions, dataenc, SHA, process, hS3, curl,
+   pcre-light, extensible-exceptions, dataenc, SHA, process, hS3, HTTP
    base < 5
 
 Executable git-annex-shell
   Main-Is: git-annex-shell.hs
   Build-Depends: haskell98, MissingH, hslogger, directory, filepath,
    unix, containers, utf8-string, network, mtl, bytestring, old-locale, time,
-   pcre-light, extensible-exceptions, dataenc, SHA, process, hS3, curl,
+   pcre-light, extensible-exceptions, dataenc, SHA, process, hS3, HTTP
    base < 5
 
 Executable git-union-merge
