@@ -5,6 +5,7 @@ git-annex (3.20110703) UNRELEASED; urgency=low
     hard link made to it.
   * uninit: Use unannex in --fast mode, to support unannexing multiple
     files that link to the same content.
+  * Drop the dependency on the haskell curl bindings, use regular haskell HTTP.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 04 Jul 2011 15:50:21 -0400
 
